# kryptonite_anu

./: .dockerignore  .gitignore  DOCKER.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
config/: model.yaml  region.yaml  schema.yaml
public/: streamFile
src/: app.py
src/components/: data_ingestion.py  data_transformation.py  fire_predictor.py
src/configuration/: nasa_db_connection.py  region.yaml
src/constants/: __init__.py
src/data_access/: fire_data.py
src/entity/: artifact_entity.py  config_entity.py
src/logger/: __init__.py
src/pipeline/: data_fetcher_pipeline.py
src/routes/: fireYolo_router.py  getHighRegionArea_router.py  home_router.py  map_router.py  streamer_router.py
src/utils/: main_utils.py
tests/: test_data_ingestion.py  test_imports.py  test_pipeline.py  test_pipeline_up.py
