[project]
name = "kryptonite"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dill>=0.4.1",
    "dotenv>=0.9.9",
    "fastapi>=0.128.4",
    "folium>=0.20.0",
    "from-root>=1.3.0",
    "geopandas>=1.1.2",
    "pandas>=3.0.0",
    "python-multipart>=0.0.22",
    "scikit-learn>=1.8.0",
    "ultralytics>=8.4.12",
    "uvicorn[standard]>=0.40.0",
    "websockets>=16.0",
]
